// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// https://dbdiagram.io/



Table usuario {
  id integer [primary key, increment]
  email char(50) [not null, unique]
  password char (65) [not null]
  user_type integer(3) [not null]
  first_login bool [not null]
  nombre varchar(50) [not null]
  apellido_pat varchar(50) [not null]
  apellido_mat varchar(50) [not null]
  habilitado bool [not null]
}

Table docente_carrera{
  id integer [primary key, increment]
  carrera_id integer [ref: > carrera.id]
  usuario_id integer [ref: > usuario.id]
}

table disponibilidad{
  id integer [primary key, increment]
  horas json
  usuario_id integer [ref: > usuario.id]
  ciclo_id integer [ref: > ciclo.id]
}


Table carrera {
  id integer [primary key, increment]
  nombre varchar (50) [not null]
  plan_de_estudio varchar(15) [not null]
}

Table materia{
  id integer [primary key, increment]
  clave char(30) [not null]
  nombre varchar(60) [not null]
  semestre integer(3) [not null]
  horas_practica integer(2) [not null]
  horas_teoria integer(2) [not null]
  creditos integer(2) [not null]
}

Table materias_carrera{
  id integer [primary key, increment]
  carrera_id integer [ref: > carrera.id]
  materia_id integer [ref: > materia.id]
}


Table aula{
  id integer [primary key, increment]
  nombre char(10) [not null]
  edificio varchar(20) [not null]
}

table asignacion{
  id integer [primary key, increment]
  horario json
  grupo_semestre_id integer [ref: >grupo_semestre.id]
  carrera_id integer [ref: > carrera.id]
  ciclo_id integer [ref: > ciclo.id]
}

table ciclo{
  id integer [primary key, increment]
  anio integer [not null]
  estacion char(2) [not null]
  actual bool [not null]
}

table grupo{
  id integer [primary key, increment]
  identificador char(5) [not null]
  carrera_id integer [ref: > carrera.id]
  ciclo_id integer [ref: > ciclo.id] 
}

table grupo_semestre{
  id integer [primary key, increment]
  grupo_id integer [ref: > grupo.id]
  semestre integer 
}
